--- a/app/src/main/res/layout/item_article_2.xml
+++ b/app/src/main/res/layout/item_article_2.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp"
+    android:layout_margin="7dp"
     app:cardElevation="8dp">
 
     <LinearLayout
@@ -29,13 +29,15 @@
             android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:textStyle="bold"
             android:padding="2dp"
             />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="25dp"
-            android:layout_marginTop="5dp"
+            android:layout_margin="5dp"
             android:orientation="horizontal"
             >
 
@@ -51,7 +53,7 @@
                     <!--android:layout_width="20dp"-->
                     <!--android:layout_height="20dp" />-->
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/article_author_image"
                     android:src="@drawable/ic_person_color"
                     android:layout_width="20dp"
@@ -69,6 +71,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_marginLeft="30dp"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content">
@@ -104,7 +107,6 @@
         <com.careeranna.careeranna.misc.TextViewEx
             android:id="@+id/article_content"
             android:text="@string/sample_article_content"
-            android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
             />
