--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="login_screen_buttons_margin">30dp</dimen>
     <dimen name="badge_count_textsize">12sp</dimen>
     <dimen name="signin_icon_google_fb">45dp</dimen>
+    <dimen name="userProf_options_margin">30dp</dimen>
 </resources>
