--- a/app/src/main/res/drawable/ic_send_white_24dp.xml
+++ b/app/src/main/res/drawable/ic_send_white_24dp.xml
@@ -1,5 +1,5 @@
-<vector android:height="12dp" android:tint="#F5F5F5"
+<vector android:height="12dp" android:tint="#0780c9"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="12dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
+    <path android:fillColor="#0780c9" android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
 </vector>
