--- a/app/src/main/res/layout/item_comment_child.xml
+++ b/app/src/main/res/layout/item_comment_child.xml
@@ -2,28 +2,27 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_margin="5dp"
-    android:elevation="5dp"
+    android:layout_marginBottom="1dp"
     android:layout_height="wrap_content">
 
     <RelativeLayout
+        android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
         <RelativeLayout
             android:layout_marginTop="5dp"
-            android:layout_width="50dp"
+            android:layout_width="30dp"
             android:layout_marginLeft="5dp"
             android:id="@+id/rel"
             android:background="@drawable/cirlce_2"
-            android:layout_height="50dp">
+            android:layout_height="30dp">
 
             <TextView
                 android:src="@drawable/ic_person_color"
                 android:layout_width="match_parent"
                 android:gravity="center"
-                android:textSize="20sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 android:text="A"
                 android:textColor="@color/white"
@@ -33,30 +32,29 @@
 
         </RelativeLayout>
 
-
         <TextView
-            android:layout_width="match_parent"
-            android:layout_marginRight="2dp"
-            android:layout_height="wrap_content"
-            android:text="comment"
-            android:layout_toRightOf="@id/rel"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:layout_marginLeft="20dp"
-            android:id="@+id/comment"
-            />
-
-        <TextView
-            android:layout_below="@id/comment"
             android:layout_width="match_parent"
             android:layout_marginRight="2dp"
             android:layout_height="wrap_content"
             android:text="name"
             android:layout_toRightOf="@id/rel"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:id="@+id/name"
             android:textColor="#686060"
             android:layout_marginLeft="20dp"
+            />
+
+        <TextView
+            android:layout_below="@id/name"
+            android:layout_width="match_parent"
+            android:layout_marginRight="2dp"
+            android:layout_height="wrap_content"
+            android:text="comment"
+            android:layout_toRightOf="@id/rel"
+            android:textSize="14sp"
+            android:textColor="@color/black"
+            android:layout_marginLeft="20dp"
+            android:id="@+id/comment"
             />
 
     </RelativeLayout>
