--- a/app/src/main/res/layout/item_comment_parent.xml
+++ b/app/src/main/res/layout/item_comment_parent.xml
@@ -2,8 +2,7 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_margin="2dp"
-    android:elevation="5dp"
+    android:layout_marginBottom="1dp"
     android:layout_height="wrap_content">
 
     <RelativeLayout
@@ -13,17 +12,17 @@
 
         <RelativeLayout
             android:layout_marginTop="5dp"
-            android:layout_width="45dp"
+            android:layout_width="30dp"
             android:layout_marginLeft="5dp"
             android:id="@+id/rel"
             android:background="@drawable/cirlce_2"
-            android:layout_height="45dp">
+            android:layout_height="30dp">
 
             <TextView
                 android:src="@drawable/ic_person_color"
                 android:layout_width="match_parent"
                 android:gravity="center"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 android:text="A"
                 android:textColor="@color/white"
@@ -32,6 +31,19 @@
                 />
 
         </RelativeLayout>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_marginRight="2dp"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:layout_toRightOf="@id/rel"
+            android:textSize="12sp"
+            android:id="@+id/name"
+            android:textColor="#686060"
+            android:layout_marginLeft="20dp"
+            />
 
         <TextView
             android:layout_width="match_parent"
@@ -42,21 +54,8 @@
             android:textSize="16sp"
             android:textColor="@color/black"
             android:layout_marginLeft="20dp"
+            android:layout_below="@id/name"
             android:id="@+id/comment"
-            />
-
-
-        <TextView
-            android:layout_below="@id/comment"
-            android:layout_width="match_parent"
-            android:layout_marginRight="2dp"
-            android:layout_height="wrap_content"
-            android:text="Name"
-            android:layout_toRightOf="@id/rel"
-            android:textSize="14sp"
-            android:id="@+id/name"
-            android:textColor="#686060"
-            android:layout_marginLeft="20dp"
             />
 
         <LinearLayout
@@ -64,31 +63,32 @@
             android:layout_height="wrap_content"
             android:weightSum="10"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
             android:id="@+id/coment_linear"
             android:layout_toRightOf="@id/rel"
-            android:layout_below="@id/name"
-            android:layout_marginBottom="10dp"
-            >
+            android:layout_below="@id/comment"
+            android:layout_marginBottom="10dp">
 
             <Button
                 android:background="@android:color/transparent"
                 android:layout_width="0dp"
                 android:layout_height="20dp"
-                android:layout_weight="3"
-                android:text="reply"
+                android:layout_weight="5"
+                android:text="View Replies"
                 android:id="@+id/reply"
                 android:textStyle="bold"
                 android:textColor="@color/colorPrimary"
                 android:textSize="12sp"
-                android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
+                android:drawableRight="@drawable/ic_arrow_drop_down_black1_24dp"
                 />
 
             <TextView
+                android:drawableLeft="@drawable/ic_message_black_24dp"
                 android:id="@+id/no_of_comments"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="7"
-                android:text="3 comments"
+                android:text="  3 Comments"
                 android:textSize="12sp"
                 android:layout_marginLeft="10dp"
                 android:textStyle="bold"
@@ -102,7 +102,7 @@
                 android:layout_width="match_parent"
                 android:id="@+id/child_tv"
                 android:layout_marginLeft="60dp"
-                android:hint="Enter Comment"
+                android:hint="Add A Public Reply"
                 android:layout_marginRight="10dp"
                 android:visibility="gone"
                 android:layout_below="@id/coment_linear"
@@ -133,8 +133,8 @@
             android:layout_alignParentRight="true"
             android:drawableRight="@drawable/ic_send_white_24dp"
             android:padding="10dp"
-            android:background="@color/colorPrimary"
-            android:textColor="@color/white"
+            android:background="@android:color/transparent"
+            android:textColor="@color/colorPrimary"
             android:id="@+id/reply_parent"
             />
 
