--- a/app/src/main/res/layout/items_videos_new.xml
+++ b/app/src/main/res/layout/items_videos_new.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="240dp"
+    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     app:cardCornerRadius="8dp"
@@ -17,12 +17,13 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="4">
+            android:layout_weight="5">
+
 
             <ImageView
                 android:elevation="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@drawable/ic_play_circle_video_black_24dp"
                 android:layout_centerInParent="true"
                 />
@@ -34,14 +35,34 @@
                 android:layout_height="match_parent"
                 android:src="@drawable/intro_pic_3"
                 />
+            <TextView
+                android:id="@+id/duration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:text="12:10"
+                android:textSize="14sp"
+                android:background="#0b0b0b"
+                android:textColor="@color/white"
+                android:padding="4dp"
+                android:gravity="center_vertical"
+                />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
         </RelativeLayout>
 
         <TextView
             android:id="@+id/title"
             android:textColor="@color/black"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
@@ -50,29 +71,78 @@
 
         <TextView
             android:id="@+id/views"
+            android:layout_marginBottom="5dp"
             android:textColor="@color/black"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="views 100"
+            android:text="100 views"
             android:layout_marginLeft="10dp"
             android:gravity="center_vertical"
             android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/baseline_remove_red_eye_black_18dp"
+            android:drawableLeft="@drawable/ic_remove_red_eye_black_24dp"
             />
 
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_marginLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/star1"
+                android:src="@drawable/ic_star_black_24dp" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/star2"
+                android:layout_toRightOf="@id/star1"
+                android:src="@drawable/ic_star_black_24dp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/star3"
+                android:layout_toRightOf="@id/star2"
+                android:src="@drawable/ic_star_black_24dp" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/star4"
+                android:layout_toRightOf="@id/star3"
+                android:src="@drawable/ic_star_half_black_24dp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/star5"
+                android:layout_toRightOf="@id/star4"
+                android:src="@drawable/ic_star_border_black_24dp"/>
+
+            <TextView
+                android:layout_toRightOf="@id/star5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:layout_marginLeft="10dp"
+                android:id="@+id/ratings"
+                android:text="( 100 Ratings)"
+                android:textColor="@color/black"
+                />
+        </RelativeLayout>
+
         <TextView
-            android:id="@+id/ratings"
+            android:id="@+id/tags"
             android:textColor="@color/black"
+            android:layout_marginBottom="5dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="Ratings 5(100)"
+            android:text="Cat, XCat"
             android:layout_marginLeft="10dp"
             android:gravity="center_vertical"
             android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/ic_stars_black_24dp"
+            android:drawableLeft="@drawable/ic_tag_black_shape"
             />
 
     </LinearLayout>
