--- a/app/src/main/res/layout/menu_icon_with_divider.xml
+++ b/app/src/main/res/layout/menu_icon_with_divider.xml
@@ -3,10 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
-    android:background="#fff"
-    >
+    android:background="#fff">
+
+    <ImageView
+        android:layout_alignParentLeft="true"
+        android:layout_marginRight="10dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:id="@+id/image"
+        />
 
     <TextView
+        android:layout_toRightOf="@+id/image"
         android:layout_marginLeft="10dp"
         android:id="@+id/text"
         android:textColor="@color/colorPrimary"
