--- a/app/src/main/res/drawable/intro_button_focused.xml
+++ b/app/src/main/res/drawable/intro_button_focused.xml
@@ -6,5 +6,5 @@
         android:left="5dp"
         android:right="5dp" />
     <solid
-        android:color="@color/intro_button" />
+        android:color="@color/colorPrimary" />
 </shape>
