--- a/app/src/main/res/drawable/intro_button_pressed.xml
+++ b/app/src/main/res/drawable/intro_button_pressed.xml
@@ -6,5 +6,5 @@
         android:left="5dp"
         android:right="5dp" />
     <solid
-        android:color="@color/intro_button_pressed" />
+        android:color="@color/colorPrimaryDark" />
 </shape>
