--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -7,9 +7,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+
     <android.support.v7.widget.CardView
         android:id="@+id/bt_userProf_myCourses"
         app:cardElevation="2dp"
+        android:backgroundTint="@color/colorPrimary"
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -20,7 +23,7 @@
             android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/white"
             android:text="My Courses"
             android:textStyle="bold"
             android:gravity="center"
