--- a/app/src/main/res/layout/intro_slider.xml
+++ b/app/src/main/res/layout/intro_slider.xml
@@ -15,12 +15,12 @@
         android:layout_height="wrap_content" />
 
     <TextView
-        android:hint="Title"
+        android:text="Sample Title"
         android:gravity="center"
         android:textSize="35sp"
         android:textStyle="bold"
         android:id="@+id/intro_slide_title"
-        android:textColor="@color/intro_title"
+        android:textColor="@color/colorPrimaryDark"
         android:layout_above="@id/intro_slide_image"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
