--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,12 +23,23 @@
         <item name="android:textColor">@color/my_spinner_text_color</item>
     </style>
 
-    <style name="EditTextTheme" parent="TextAppearance.AppCompat">
-        <item name="android:textColorHint">@color/register_screen_fields_color</item>
-        <item name="android:textSize">14sp</item>
+    <!--<style name="EditTextTheme" parent="TextAppearance.AppCompat">-->
+        <!--<item name="android:textColorHint">@color/register_screen_fields_color</item>-->
+        <!--<item name="android:textSize">14sp</item>-->
 
-        <item name="android:colorControlActivated">@color/register_screen_fields_color</item>
-        <item name="android:colorControlNormal">@color/register_screen_fields_color</item>
+        <!--<item name="android:colorControlActivated">@color/register_screen_fields_color</item>-->
+        <!--<item name="android:colorControlNormal">@color/register_screen_fields_color</item>-->
+    <!--</style>-->
+
+    <style name="UserProfileTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:actionBarSize">40dp</item>
+        <item name="actionBarSize">40dp</item>
+        <item name="android:fontFamily">@font/robotoregular</item>
+
     </style>
 
 </resources>
