--- a/app/src/main/res/drawable/ic_keyboard_arrow_right_black1_24dp.xml
+++ b/app/src/main/res/drawable/ic_keyboard_arrow_right_black1_24dp.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:tint="#F5F5F5"
+<vector android:height="40dp" android:tint="#0780C9"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M8.59,16.34l4.58,-4.59 -4.58,-4.59L10,5.75l6,6 -6,6z"/>
+    android:width="40dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#0780C9" android:pathData="M8.59,16.34l4.58,-4.59 -4.58,-4.59L10,5.75l6,6 -6,6z"/>
 </vector>
