--- a/app/src/main/res/layout/activity_my_explore_new.xml
+++ b/app/src/main/res/layout/activity_my_explore_new.xml
@@ -15,20 +15,32 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp"
+            android:paddingBottom="25dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-        <TextView
-            android:textSize="15sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Trending Videos"
-            android:textColor="@color/black"
-            android:gravity="center"
-            />
+            <android.support.design.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardElevation="4dp"
+                >
+
+                <TextView
+                    android:background="@color/colorPrimary"
+                    android:textColor="@color/white"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Trending Videos"
+                    android:textSize="18sp"
+                    android:paddingTop="5dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:paddingBottom="12dp"
+                    android:gravity="left"
+                    />
+
+            </android.support.design.card.MaterialCardView>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -54,17 +66,15 @@
                 android:elevation="10dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_keyboard_arrow_right_blackr_24dp"
-                />
+                android:src="@drawable/ic_keyboard_arrow_right_black1_24dp"/>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:layout_centerVertical="true"
-                android:background="#c2c0c0"
                 />
 
-            <android.support.v7.widget.RecyclerView
+            <com.lsjwzh.widget.recyclerviewpager.RecyclerViewPager
                 android:elevation="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -83,24 +93,37 @@
 
         <android.support.v7.widget.CardView
             app:cardElevation="5dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
+                android:paddingBottom="25dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Latest Videos"
-            android:textColor="@color/black"
-            android:gravity="center"
-            />
+                <android.support.design.card.MaterialCardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardElevation="4dp"
+                    >
 
+                    <TextView
+                        android:background="@color/colorPrimary"
+                        android:textColor="@color/white"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Latest Videos"
+                        android:textSize="18sp"
+                        android:paddingTop="5dp"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="5dp"
+                        android:paddingBottom="12dp"
+                        android:gravity="left"
+                        />
+
+                </android.support.design.card.MaterialCardView>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -126,17 +149,16 @@
                     android:elevation="10dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/ic_keyboard_arrow_right_blackr_24dp"
+                    android:src="@drawable/ic_keyboard_arrow_right_black1_24dp"
                     />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                     android:layout_centerVertical="true"
-                    android:background="#c2c0c0"
                     />
 
-        <android.support.v7.widget.RecyclerView
+        <com.lsjwzh.widget.recyclerviewpager.RecyclerViewPager
             android:elevation="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -158,19 +180,34 @@
         android:layout_height="wrap_content">
 
     <LinearLayout
+        android:paddingBottom="25dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-    <TextView
-            android:layout_marginTop="10dp"
+        <android.support.design.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Free Courses"
-            android:textColor="@color/black"
-            android:gravity="center"
-            />
-<RelativeLayout
+            app:cardElevation="4dp"
+            >
+
+            <TextView
+                android:background="@color/colorPrimary"
+                android:textColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Free Course"
+                android:textSize="18sp"
+                android:paddingTop="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingBottom="12dp"
+                android:gravity="left"
+                />
+
+        </android.support.design.card.MaterialCardView>
+        <RelativeLayout
+            android:layout_marginTop="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <ImageView
@@ -192,17 +229,16 @@
         android:elevation="10dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_keyboard_arrow_right_blackr_24dp"
+        android:src="@drawable/ic_keyboard_arrow_right_black1_24dp"
         />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_centerVertical="true"
-        android:background="#807a7a"
         />
 
-    <android.support.v7.widget.RecyclerView
+    <com.lsjwzh.widget.recyclerviewpager.RecyclerViewPager
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/free_course_rv"
@@ -222,21 +258,36 @@
         android:layout_height="wrap_content">
 
     <LinearLayout
+        android:paddingBottom="25dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
 
-    <TextView
-            android:layout_marginTop="10dp"
+
+        <android.support.design.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Paid Courses"
-            android:textColor="@color/black"
-            android:gravity="center"
-            />
+            app:cardElevation="4dp"
+            >
 
+            <TextView
+                android:background="@color/colorPrimary"
+                android:textColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Paid Course"
+                android:textSize="18sp"
+                android:paddingTop="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingBottom="12dp"
+                android:gravity="left"
+                />
+
+        </android.support.design.card.MaterialCardView>
     <RelativeLayout
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -260,17 +311,16 @@
             android:elevation="10dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_keyboard_arrow_right_blackr_24dp"
-            />
+
+            android:src="@drawable/ic_keyboard_arrow_right_black1_24dp"            />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_centerVertical="true"
-            android:background="#807a7a"
             />
 
-        <android.support.v7.widget.RecyclerView
+        <com.lsjwzh.widget.recyclerviewpager.RecyclerViewPager
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/paid_courses_rv"
