--- a/app/src/main/res/layout/activity_my_explore_new.xml
+++ b/app/src/main/res/layout/activity_my_explore_new.xml
@@ -42,49 +42,41 @@
 
             </android.support.design.card.MaterialCardView>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_height="wrap_content">
+            <LinearLayout
+                android:weightSum="13"
+                android:layout_width="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content">
 
             <ImageView
                 android:visibility="invisible"
+                android:layout_gravity="center_vertical"
                 android:id="@+id/arrow_t_l"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="2"
                 android:layout_height="wrap_content"
-                android:elevation="10dp"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
                 android:src="@drawable/ic_keyboard_arrow_left_black1_24dp"
                 />
 
 
+                <com.lsjwzh.widget.recyclerviewpager.RecyclerViewPager
+                    android:elevation="10dp"
+                    android:layout_width="0dp"
+                    android:layout_weight="9"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/trending_rv"
+                    android:orientation="horizontal"
+                    />
+
             <ImageView
                 android:id="@+id/arrow_t_r"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="2"
                 android:layout_height="wrap_content"
-                android:elevation="10dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
                 android:src="@drawable/ic_keyboard_arrow_right_black1_24dp"/>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_centerVertical="true"
-                />
-
-            <com.lsjwzh.widget.recyclerviewpager.RecyclerViewPager
-                android:elevation="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/trending_rv"
-                android:orientation="horizontal"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                />
-
-        </RelativeLayout>
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -125,7 +117,8 @@
 
                 </android.support.design.card.MaterialCardView>
 
-                <RelativeLayout
+                <LinearLayout
+                    android:weightSum="13"
                     android:layout_width="match_parent"
                     android:layout_marginTop="10dp"
                     android:layout_height="wrap_content">
@@ -133,41 +126,32 @@
                 <ImageView
                     android:visibility="invisible"
                     android:id="@+id/arrow_l_l"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="2"
                     android:layout_height="wrap_content"
-                    android:elevation="10dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
                     android:src="@drawable/ic_keyboard_arrow_left_black1_24dp"
                     />
 
 
+                    <com.lsjwzh.widget.recyclerviewpager.RecyclerViewPager
+                        android:layout_width="0dp"
+                        android:layout_weight="9"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/latest_rv"
+                        />
+
+
                 <ImageView
                     android:id="@+id/arrow_l_r"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="2"
                     android:layout_height="wrap_content"
-                    android:elevation="10dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
                     android:src="@drawable/ic_keyboard_arrow_right_black1_24dp"
                     />
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:layout_centerVertical="true"
-                    />
-
-        <com.lsjwzh.widget.recyclerviewpager.RecyclerViewPager
-            android:elevation="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/latest_rv"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            />
-
-                </RelativeLayout>
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -206,47 +190,42 @@
                 />
 
         </android.support.design.card.MaterialCardView>
-        <RelativeLayout
+
+
+        <LinearLayout
+            android:weightSum="13"
             android:layout_marginTop="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <ImageView
         android:visibility="invisible"
+        android:layout_gravity="center_vertical"
         android:id="@+id/arrow_f_l"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="2"
         android:layout_height="wrap_content"
-        android:elevation="10dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
         android:src="@drawable/ic_keyboard_arrow_left_black1_24dp"
         />
 
 
+            <com.lsjwzh.widget.recyclerviewpager.RecyclerViewPager
+                android:layout_width="0dp"
+                android:layout_weight="9"
+                android:layout_height="wrap_content"
+                android:id="@+id/free_course_rv"
+                />
+
     <ImageView
+        android:layout_gravity="center_vertical"
         android:id="@+id/arrow_f_r"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:elevation="10dp"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
+        android:layout_weight="2"
         android:src="@drawable/ic_keyboard_arrow_right_black1_24dp"
         />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_centerVertical="true"
-        />
 
-    <com.lsjwzh.widget.recyclerviewpager.RecyclerViewPager
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/free_course_rv"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        />
-
-</RelativeLayout>
+</LinearLayout>
 
     </LinearLayout>
     </android.support.v7.widget.CardView>
@@ -262,8 +241,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-
 
         <android.support.design.card.MaterialCardView
             android:layout_width="match_parent"
@@ -286,8 +263,11 @@
                 />
 
         </android.support.design.card.MaterialCardView>
-    <RelativeLayout
+
+        <LinearLayout
+        android:weightSum="13"
         android:layout_marginTop="10dp"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -295,40 +275,31 @@
         <ImageView
             android:visibility="invisible"
             android:id="@+id/arrow_p_l"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_gravity="center_vertical"
             android:layout_height="wrap_content"
-            android:elevation="10dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
             android:src="@drawable/ic_keyboard_arrow_left_black1_24dp"
             />
 
 
-        <ImageView
-            android:id="@+id/arrow_p_r"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elevation="10dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-
-            android:src="@drawable/ic_keyboard_arrow_right_black1_24dp"            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_centerVertical="true"
-            />
-
         <com.lsjwzh.widget.recyclerviewpager.RecyclerViewPager
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="9"
             android:layout_height="wrap_content"
             android:id="@+id/paid_courses_rv"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
             />
 
-    </RelativeLayout>
+        <ImageView
+            android:id="@+id/arrow_p_r"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_gravity="center_vertical"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_keyboard_arrow_right_black1_24dp"            />
+
+
+    </LinearLayout>
 
     </LinearLayout>
 
