--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -9,17 +9,6 @@
     android:id="@+id/layout"
     tools:context=".PasswordReset">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Reset Password"
-        android:textColor="@color/colorAccent"
-        style="@style/Base.TextAppearance.AppCompat.Large"
-        android:layout_marginTop="100dp"
-        android:id="@+id/reset"
-        />
-
     <EditText
         android:layout_marginTop="40dp"
         android:layout_width="match_parent"
@@ -28,28 +17,29 @@
         android:id="@+id/verify_code"
         android:inputType="text"
         android:maxLines="1"
-        android:layout_below="@+id/reset"
+        android:layout_above="@id/verifyCode"
         android:drawableRight="@drawable/ic_vpn_key_black_24dp"
         />
 
 
     <Button
+        android:layout_above="@id/new_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/verifyCode"
-        android:layout_below="@+id/verify_code"
         android:layout_marginTop="20dp"
         android:text="Verify Code"
+        android:layout_marginBottom="20dp"
         android:textColor="@color/white"
         android:paddingRight="60dp"
-        android:background="@color/intro_button"
+        android:background="@color/colorPrimary"
         />
 
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/verifyCode"
+        android:layout_above="@+id/confirm_new_password"
         android:layout_marginTop="20dp"
         android:id="@+id/new_password"
         app:passwordToggleEnabled="true" >
@@ -63,18 +53,36 @@
     </android.support.design.widget.TextInputLayout>
 
 
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/changePassowrd"
+        android:layout_marginTop="20dp"
+        app:errorEnabled="true"
+        android:id="@+id/confirm_new_password"
+        app:passwordToggleEnabled="true" >
+
+        <android.support.design.widget.TextInputEditText
+            android:inputType="textPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Ccnfirm Password"
+            />
+    </android.support.design.widget.TextInputLayout>
+
     <Button
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:enabled="false"
+        android:layout_marginBottom="20dp"
         android:layout_height="wrap_content"
         android:id="@+id/changePassowrd"
-        android:layout_below="@+id/new_password"
         android:layout_marginTop="20dp"
         android:text="Chaange Password"
         android:textColor="@color/white"
         android:drawableEnd="@drawable/ic_send_black_24dp"
         android:paddingRight="60dp"
-        android:background="@color/intro_button"
+        android:background="@color/colorPrimary"
         />
 
     <ProgressBar
