--- a/app/src/main/res/layout/item_sub_category.xml
+++ b/app/src/main/res/layout/item_sub_category.xml
@@ -4,14 +4,31 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
-    android:layout_margin="10dp">
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="SubCategory"
-        android:id="@+id/sub"
-        android:gravity="center"
-        />
+        android:padding="10dp"
+        android:layout_height="wrap_content">
+
+        <CheckBox
+            android:id="@+id/checkbox"
+            android:layout_alignParentLeft="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_toRightOf="@+id/checkbox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="SubCategory"
+            android:id="@+id/sub"
+            android:layout_centerVertical="true"
+            />
+
+
+
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
