--- a/app/src/main/res/layout/items_videos_new.xml
+++ b/app/src/main/res/layout/items_videos_new.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp"
-    app:cardCornerRadius="4dp"
-    android:layout_height="250dp"
+    android:layout_margin="5dp"
+    app:cardCornerRadius="5dp"
+    android:layout_height="240dp"
     app:cardElevation="5dp">
 
     <LinearLayout
@@ -18,7 +18,6 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="6">
-
 
             <ImageView
                 android:elevation="10dp"
@@ -147,15 +146,16 @@
                 />
 
             <TextView
-                android:layout_toRightOf="@id/star5"
+                android:id="@+id/ratings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
+                android:layout_alignParentTop="true"
                 android:layout_marginLeft="10dp"
-                android:id="@+id/ratings"
-                android:text="4.00 ( 4,000 Ratings)"
+                android:layout_marginTop="0dp"
+                android:layout_toRightOf="@id/star5"
+                android:text="4.00 ( 4,00 Ratings)"
                 android:textColor="#7e7171"
-                />
+                android:textSize="12sp" />
         </RelativeLayout>
 
         <TextView
