--- a/app/src/main/res/layout/menu_icon_with_divider.xml
+++ b/app/src/main/res/layout/menu_icon_with_divider.xml
@@ -14,16 +14,19 @@
         />
 
     <TextView
+        android:gravity="center"
         android:layout_toRightOf="@+id/image"
         android:layout_marginLeft="10dp"
         android:id="@+id/text"
+        android:layout_toLeftOf="@+id/arrow"
         android:textColor="@color/colorPrimary"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:background="?android:attr/selectableItemBackground"/>
 
     <ImageView
+        android:id="@+id/arrow"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         android:layout_width="wrap_content"
